fixed footer spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,6 +223,7 @@ body {
         display: flex;
         flex-wrap: wrap;
         position: relative;
+        justify-content: center;
         top: 275px;
         bottom:0rem;
         width:100%;
@@ -234,6 +235,7 @@ body {
         margin-bottom: 2rem;
     }
 
+    
 }
 
 @media only screen and (min-width: 800px) {
@@ -242,6 +244,7 @@ body {
         display: flex;
         flex-wrap: wrap;
         position: relative;
+        justify-content: center;
         bottom:0rem;
         width:100%;
         background: var(--primary-color); 
@@ -251,6 +254,9 @@ body {
         margin-bottom: 2rem;
     }
 
+    #footer-lyricLover {
+        margin-left: .75rem;
+    }
 }
 
 @media only screen and (min-width: 1000px) {
@@ -259,17 +265,44 @@ body {
         display: flex;
         flex-wrap: wrap;
         position: relative;
+        justify-content: center;
         bottom:0rem;
         width:100%;
         margin-top: 2rem;
         background: var(--primary-color);
-        justify-content: space-evenly;
     }
 
     .main {
         margin-bottom: 2rem;
     }
 
+    #footer-lyricLover {
+        margin-left: .75rem;
+    }
+
+}
+
+@media only screen and (min-width: 1050px) {
+
+    #footer {
+        display: flex;
+        flex-wrap: wrap;
+        position: relative;
+        justify-content: center;
+        bottom:0rem;
+        width:100%;
+        margin-top: 2rem;
+        background: var(--primary-color);
+        
+    }
+
+    .main {
+        margin-bottom: 2rem;
+    }
+
+    #footer-lyricLover {
+        margin-left: .75rem;
+    }
 }
 
             
@@ -279,6 +312,7 @@ body {
     #footer {
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
         position: relative;
         top: 275px;
         bottom:0rem;
@@ -291,6 +325,9 @@ body {
         margin-bottom: 2rem;
     }
     
+    #footer-lyricLover {
+        margin-left: .75rem;
+    }
 }
 
 @media only screen and (min-width: 1500px) {
@@ -320,12 +357,17 @@ body {
         bottom:0rem;
         width:100%;
         background: var(--primary-color); 
+        justify-content: center;
     }
                     
     .main {
         margin-bottom: 2rem;
     }
                     
+    #footer-lyricLover {
+        margin-left: .75rem;
+    }
+
 }
 
 @media only screen and (max-width: 770px) {
